--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "main": "index.js",
   "author": "j2FunOnly <j2funonly@ya.ru>",
   "license": "MIT",
+  "scripts": {
+    "server": "node node_modules/gulp/bin/gulp.js"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "tether": "^1.4.5"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.3",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2"
   }
 }
