--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
-    "tether": "^1.4.5"
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
